# apple_health_analysis

./: .gitignore  LICENSE  README  README.md  main.py  pyproject.toml
.github/workflows/: checks.yml  lint.yml  lint_and_test.yml
notebooks/: EDA.ipynb  Explore Export.ipynb  Glucose.ipynb  Records EDA.ipynb
scripts/: lint.sh  test.sh
src/apple_health_analysis/: export.py  healthdata.py  record.py
tests/: test_export.py  test_healthdata.py  test_record.py
